--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "npm run dev --prefix client",
-    "dev": "concurrently \"npm start\" \"npm run client\"",
-    "heroku-postbuild" : "cd client && npm install && npm run build"
-  },
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "start": "node server.js",
+  "server": "nodemon server.js",
+  "client": "npm run dev --prefix client",
+  "build": "npm install --prefix client && npm run build --prefix client",
+  "dev": "concurrently \"npm start\" \"npm run client\""
+},
   "keywords": [],
   "author": "Abhay Joshi",
   "license": "MIT",
